@@ -17,8 +17,8 @@ radial2 radon randrefl rays2 rays2a rays3 refer ricker ricker1 ricker2
 rweab rwesrmig rwezomig s2ofz s2ofz2 segyheader segyread segywrite
 shifts shoot2 shot2cmp shotconstkirch shotholes shotprop sin slant
 srmva srsyn sstep2 stolt stolt2 stoltstretch stretch tan2ang taupmo
-time2depth tlagtoang2d tshift txpscan txpnmo vczo velmod veltran voft
-vofz vscan xlagtoang2d zoeppritz zomig zomva
+time2depth tlagtoang2d tshift txpscan txpnmo vczo vczo2 velmod veltran
+voft vofz vscan xlagtoang2d zoeppritz zomig zomva
 '''
 
 libsrc = 'segy'
