@@ -37,6 +37,7 @@ To programs:
 * Added eps= parameter to sflsfit
 * user/fbroggin: New contributor (Filippo Broggini)
 * sfpef renamed sfhpef
+* Added color=x cubehelix color scheme in sfgrey and sfgrey3
 
 ===Bug fixes===
 
